@@ -1,5 +1,6 @@
 Version 1.1.0-CVS (?? ??? 2005)
   - Fixed the following bug reports on SourceForge:
+      1410487: ical export generates wrong escape sequences
       1407377: Entry of a task in the 'activity log' is not correct
       1403218: v1.1 Reminder Email not Formatted
       1357358: Columns to narrow between 'date' and '%' in small task list
